[gd_scene load_steps=21 format=2]

[ext_resource path="res://Prefabs/Weapons/Hard_enemy_projectile.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Enemy_logic/Mine_logic.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Enemy_sprites/Enemy_mine.png" type="Texture" id=3]
[ext_resource path="res://Sprites/UI/Mine_field_reach.png" type="Texture" id=4]
[ext_resource path="res://addons/randomAudioStreamPlayer/random_audio_stream_player_2D.gd" type="Script" id=5]
[ext_resource path="res://Sprites/FX/Debris.png" type="Texture" id=6]
[ext_resource path="res://Sprites/FX/Smoke_puff.png" type="Texture" id=7]
[ext_resource path="res://Sounds/SFX/Hit_sound_edit.wav" type="AudioStream" id=8]

[sub_resource type="CircleShape2D" id=1]
radius = 9.05539

[sub_resource type="Shader" id=36]
code = "shader_type canvas_item;

uniform vec4 hit_color : hint_color = vec4(1.0, 1.0, 1.0, 1.0);
uniform float hit_strength : hint_range(0.0,1.0) = 0.0;

void fragment() {
	vec4 custom_color = texture(TEXTURE, UV);
	custom_color.rgb = mix(custom_color.rgb, hit_color.rgb, hit_strength);
	COLOR = custom_color;
}"

[sub_resource type="ShaderMaterial" id=37]
resource_local_to_scene = true
shader = SubResource( 36 )
shader_param/hit_color = Color( 1, 1, 1, 1 )
shader_param/hit_strength = 0.0

[sub_resource type="Animation" id=38]
resource_name = "Hit"
length = 0.2
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Particles2D2:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:material:shader_param/hit_strength")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.04, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 1.0, 1.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Particles2D3:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.01, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("RandomAudioStreamPlayer2D")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
} ]
}

[sub_resource type="Animation" id=39]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/hit_strength")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="CircleShape2D" id=2]
radius = 24.0

[sub_resource type="Curve" id=40]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.0869565, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=35]
curve = SubResource( 40 )

[sub_resource type="ParticlesMaterial" id=41]
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 98, 0 )
initial_velocity = 500.0
initial_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 310.6
angle_random = 1.0
scale = 0.5
scale_random = 1.0
scale_curve = SubResource( 35 )
hue_variation = 0.1
hue_variation_random = 1.0

[sub_resource type="Gradient" id=42]
colors = PoolColorArray( 0, 0, 0, 1, 0.265137, 0.265137, 0.265137, 1 )

[sub_resource type="GradientTexture" id=43]
gradient = SubResource( 42 )

[sub_resource type="ParticlesMaterial" id=44]
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, -100, 0 )
initial_velocity = 50.0
initial_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 310.6
angle_random = 1.0
scale = 0.5
scale_random = 1.0
scale_curve = SubResource( 35 )
color_ramp = SubResource( 43 )

[node name="Mine" type="KinematicBody2D" groups=["Enemies"]]
z_index = -1
collision_layer = 0
script = ExtResource( 2 )
bullet = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Mine_indicator" type="Sprite" parent="."]
texture = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 37 )
texture = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Hit = SubResource( 38 )
anims/RESET = SubResource( 39 )

[node name="Tween" type="Tween" parent="."]

[node name="Hitstop" type="Tween" parent="."]

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Rotater" type="Node2D" parent="."]

[node name="Detection_zone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detection_zone"]
shape = SubResource( 2 )

[node name="Particles2D2" type="Particles2D" parent="."]
emitting = false
amount = 20
explosiveness = 0.1
local_coords = false
process_material = SubResource( 41 )
texture = ExtResource( 6 )
__meta__ = {
"_editor_description_": ""
}

[node name="Particles2D3" type="Particles2D" parent="."]
emitting = false
amount = 20
explosiveness = 1.0
local_coords = false
process_material = SubResource( 44 )
texture = ExtResource( 7 )
__meta__ = {
"_editor_description_": ""
}

[node name="RandomAudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
bus = "SFX-2"
script = ExtResource( 5 )
samples = [ ExtResource( 8 ) ]
random_strategy = 1
random_pitch_range = 1.0

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Detection_zone" to="." method="_on_Detection_zone_body_entered"]
